--- a/KeisanButsuri_III.ipynb
+++ b/KeisanButsuri_III.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## 6.2.3 部分ボルツマン因子の計算\n",
     "\n",
-    "1次元XXXハイゼンベルグモデルのn次近似分配関数を求める。\n",
+    "### 1次元XXXハイゼンベルグモデルのn次近似分配関数を求める\n",
     "\n",
     "ハミルトニアン\n",
     "$$\n",
@@ -34,7 +34,7 @@
     "結果は、90パターンの電子配置について、積が0以外になり、合計は$Z_n=44.627744732937494$となった。ChatGPTが出した解の一つと一致しているが確信が持てない...\n",
     "\n",
     "（追記）\n",
-    "黒マスは許容配置、白マスが不許容配置を含んで90パターン。全マスが許容配置になるのは30パターンのみ。どちらで計算すべきかわからない。。"
+    "黒マスは許容配置、白マスが不許容配置を含んで90パターン。全マスが許容配置になるのは30パターンのみ。どちらで計算すべきかわからない。。 => 黒マスだけ許容配置になっていればOK"
    ]
   },
   {
@@ -157,6 +157,323 @@
     "# n=2, L=4の場合、90通りの電子配列で0ではなければOK\n",
     "print(n_non_zero)\n",
     "print('Zn=', sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce0e0994-1bc6-4a11-95bd-b04f1b455a89",
+   "metadata": {},
+   "source": [
+    "### 1次元XXXハイゼンベルグモデルをメトロポリス法でサンプリングして計算する\n",
+    "\n",
+    "局所プラケット(2x2の電子配列のブロック)をフリップする方法で更新する。ランダムに白マスを選んでフリップし、その周辺の4プラケットに対してρを求めて更新確率を決める。\n",
+    "\n",
+    "ある程度電子配置は更新されている模様だが、結果は$E=-0.3166987272137258$となり$Zn$を求めてから数値微分した方式と値が一致しない。どこかに誤りがあるのかも知れない。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "218c2d3b-860c-47dd-9a55-5bd8b92d7424",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spins(before):\n",
+      " [[ 1 -1  1 -1]\n",
+      " [ 1 -1  1 -1]\n",
+      " [ 1 -1  1 -1]\n",
+      " [ 1 -1  1 -1]]\n",
+      "spins(after):\n",
+      " [[ 1  1 -1 -1]\n",
+      " [ 1  1 -1 -1]\n",
+      " [ 1  1 -1 -1]\n",
+      " [ 1  1 -1 -1]]\n",
+      "平均エネルギー = -0.3166987272137258\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# パラメータ\n",
+    "L = 4              # 1次元スピン鎖の長さ\n",
+    "n = 4              # トロッター分割数（分割数x2した値をセットする）\n",
+    "beta = 1.0         # 逆温度\n",
+    "J = 1.0            # 相互作用定数\n",
+    "n_steps = 10000    # MCS数\n",
+    "\n",
+    "# 部分ボルツマン因子ρの要素\n",
+    "a_in_rho = math.exp(beta*J/(2*n))\n",
+    "b_in_rho = math.exp(-beta*J/(2*n))*math.cosh(beta*J/n)\n",
+    "c_in_rho = math.exp(-beta*J/(2*n))*math.sinh(beta*J/n)\n",
+    "\n",
+    "# 許されるスピン配列で初期化\n",
+    "def construct_initial_config(n, L):\n",
+    "    spins = np.ones((n, L), dtype=int)\n",
+    "    for i in range(L):\n",
+    "        spins[:,i] = 1 if i%2==0 else -1\n",
+    "    return spins\n",
+    "\n",
+    "# 1ステップ更新\n",
+    "def metropolis_update(spins):\n",
+    "  n, L = spins.shape\n",
+    "  for _ in range(n*L):\n",
+    "    # ランダムに白マスの左上を選ぶ\n",
+    "    while True:\n",
+    "      i = np.random.randint(n)\n",
+    "      j = np.random.randint(L)\n",
+    "      if (i % 2 == 0 and j % 2 == 1) or (i % 2 == 1 and j % 2 == 0):\n",
+    "        break\n",
+    "\n",
+    "    block = pick_plaquette(spins, i, j)\n",
+    "    block_flipped = -block\n",
+    "\n",
+    "    # 部分ボルツマン因子の比を計算\n",
+    "    # print(\"spins(before):\\n\", spins)\n",
+    "    rho_before = product_of_neighbor_rhos(spins, i, j)\n",
+    "    # print(\"rho_before: \", rho_before)\n",
+    "    fliped_spins = flip_plaquette(spins, i, j)\n",
+    "    # print(\"fliped_spins:\\n\", fliped_spins)\n",
+    "    rho_after = product_of_neighbor_rhos(fliped_spins, i, j)\n",
+    "    # print(\"rho_after: \", rho_after)\n",
+    "    R = rho_after / rho_before\n",
+    "    # メトロポリス判定\n",
+    "    if R >= 1.0 or np.random.rand() < R:\n",
+    "        spins = fliped_spins\n",
+    "        # print(\"spin updated:\\n\", spins)\n",
+    "  return spins\n",
+    "\n",
+    "# チェッカーボード上の左上の格子点i,jを指定すると、4格子点のプラケットを返す\n",
+    "def pick_plaquette(spins, i, j):\n",
+    "  block = np.array([\n",
+    "    [spins[i,j], spins[i,(j+1)%L]],\n",
+    "    [spins[(i+1)%n,j], spins[(i+1)%n,(j+1)%L]]\n",
+    "  ])\n",
+    "  return block\n",
+    "\n",
+    "# チェッカーボード上の左上の格子点i,jを指定すると、周辺の4プラケットの部分ボルツマン因子の積を返す\n",
+    "def product_of_neighbor_rhos(spins, i, j):\n",
+    "  plaquette1 = pick_plaquette(spins, (i+1)%n, j)\n",
+    "  plaquette2 = pick_plaquette(spins, (i-1)%n, j)\n",
+    "  plaquette3 = pick_plaquette(spins, i, (j-1)%L)\n",
+    "  plaquette4 = pick_plaquette(spins, i, (j+1)%L)\n",
+    "  return get_rho(plaquette1) * get_rho(plaquette2) * get_rho(plaquette3) * get_rho(plaquette4)\n",
+    "\n",
+    "def flip_plaquette(spins, i, j):\n",
+    "  flipped = spins.copy()\n",
+    "  # 4つの格子をフリップする\n",
+    "  flipped[i,j] *= -1\n",
+    "  flipped[i,(j+1)%n] *= -1\n",
+    "  flipped[(i+1)%L,j] *= -1\n",
+    "  flipped[(i+1)%L,(j+1)%n] *= -1\n",
+    "  return flipped\n",
+    "\n",
+    "# 部分ボルツマン因子のスピン配列に対応する要素を取得する\n",
+    "def get_rho(plaquette, beta=None):\n",
+    "  a_, b_, c_ = None, None, None\n",
+    "  if beta is not None:\n",
+    "    a_ = math.exp(beta*J/(2*n))\n",
+    "    b_ = math.exp(-beta*J/(2*n))*math.cosh(beta*J/n)\n",
+    "    c_ = math.exp(-beta*J/(2*n))*math.sinh(beta*J/n)\n",
+    "\n",
+    "  if np.array_equal(plaquette, np.array([[1, 1],[1, 1]])):\n",
+    "    return a_ or a_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[1, -1],[1, -1]])):\n",
+    "    return b_ or b_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[-1, 1],[-1, 1]])):\n",
+    "    return b_ or b_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[1, -1],[-1, 1]])):\n",
+    "    return c_ or c_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[-1, 1],[1, -1]])):\n",
+    "    return c_ or c_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[-1, -1],[-1, -1]])):\n",
+    "    return a_ or a_in_rho\n",
+    "  else:\n",
+    "    return 0\n",
+    "\n",
+    "# チェッカーボード上の黒マス全てのrhoの積を計算する\n",
+    "def product_of_rhos(spins):\n",
+    "  n, L = spins.shape\n",
+    "  product = 1\n",
+    "  for i in range(n):\n",
+    "    for j in range(L):\n",
+    "      # 黒マスのみ計算する\n",
+    "      if (i % 2 == 0 and j % 2 == 0) or (i % 2 == 1 and j % 2 == 1):\n",
+    "        plaq = pick_plaquette(spins, i, j)\n",
+    "        product *= get_rho(plaq)\n",
+    "  return product\n",
+    "\n",
+    "# エネルギー計算\n",
+    "def energy(spins, beta):\n",
+    "    # 数値微分\n",
+    "    def drho_dbeta(plaq, beta, h=1e-5):\n",
+    "        return (get_rho(plaq, beta+h) - get_rho(plaq, beta-h)) / (2*h)\n",
+    "\n",
+    "    sum = 0\n",
+    "    n, L = spins.shape\n",
+    "    for i in range(n):\n",
+    "        for j in range(L):\n",
+    "            # 黒マス \n",
+    "            if (i % 2 == 0 and j % 2 == 0) or (i % 2 == 1 and j % 2 == 1):\n",
+    "                plaq = pick_plaquette(spins, i, j)\n",
+    "                sum += drho_dbeta(plaq, beta) / get_rho(plaq, beta)\n",
+    "    return -sum\n",
+    "\n",
+    "# メインループ\n",
+    "spins = construct_initial_config(n, L)\n",
+    "print(\"spins(before):\\n\", spins)\n",
+    "\n",
+    "energies = []\n",
+    "for step in range(n_steps):\n",
+    "    spins = metropolis_update(spins)\n",
+    "    energies.append(energy(spins, beta))\n",
+    "\n",
+    "  # if step > n_steps//2:  # 熱平衡化後に測定\n",
+    "  # energies.append(energy(spins))\n",
+    "\n",
+    "print(\"spins(after):\\n\", spins)\n",
+    "print(\"エネルギー期待値=\", np.mean(energies))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a97676c-f0e7-4656-b1a4-4901ac45b902",
+   "metadata": {},
+   "source": [
+    "### エネルギー期待値を数値微分で求める\n",
+    "\n",
+    "パラメータは$n=2, L=4, \\beta=1, J=1$（nは処理の都合上2nの値をパラメータに入れている）\n",
+    "\n",
+    "モンテカルロ法がうまく実装できなかったので、分配関数Znの値を求めてから、$E=-\\frac{\\partial(lnZ_n)}{\\partial \\beta}$を数値微分で求めると、$E=-1.6546837361408604$となった。この条件でのエネルギー期待値は-1.6453897143 (by ChatGPT)らしいので一致している？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a4fe475a-7f51-4ed9-9310-5edadc290c24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zn: 44.628483188555606\n",
+      "Zn: 44.62700629248769\n",
+      "E: -1.6546837361408604\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "# パラメータ\n",
+    "L = 4              # 1次元スピン鎖の長さ\n",
+    "n = 4              # トロッター分割数（分割数x2した値をセットする）\n",
+    "beta = 1.0         # 逆温度\n",
+    "J = 1.0            # 相互作用定数\n",
+    "\n",
+    "def all_possible_configurations(n, L):\n",
+    "    N = 1 << (n*L)   # 2^(L^2)\n",
+    "    n_ = np.arange(N, dtype=np.uint32)\n",
+    "    bits = ((n_[:, None] >> np.arange(L**2, dtype=np.uint32)) & 1).astype(np.int8)\n",
+    "    spins = 2*bits - 1   # 0→-1, 1→+1\n",
+    "    mats = spins.reshape(N, n, L)\n",
+    "    return mats\n",
+    "\n",
+    "# チェッカーボード上の左上の格子点i,jを指定すると、4格子点のプラケットを返す\n",
+    "def pick_plaquette(spins, i, j):\n",
+    "  block = np.array([\n",
+    "    [spins[i,j], spins[i,(j+1)%L]],\n",
+    "    [spins[(i+1)%n,j], spins[(i+1)%n,(j+1)%L]]\n",
+    "  ])\n",
+    "  return block\n",
+    "\n",
+    "# 全ての許容される電子配列を生成する\n",
+    "def all_allowed_configurations(n, L, rho_entries):\n",
+    "  worlds = all_possible_configurations(n, L)\n",
+    "  # print(\"worlds.shape:\", worlds.shape)\n",
+    "  allowed_worlds = []\n",
+    "  for spins in worlds:\n",
+    "    # print(\"spins:\\n\", spins)\n",
+    "    if grid_check_rho_value(spins, rho_entries):\n",
+    "      allowed_worlds.append(spins)\n",
+    "  return np.array(allowed_worlds)\n",
+    "\n",
+    "# 各プラケットを走査して、許される電子配列かどうかをチェックする\n",
+    "def grid_check_rho_value(spins, rho_entries):\n",
+    "  n, L = spins.shape\n",
+    "  for i in range(n):\n",
+    "    for j in range(L):\n",
+    "      # 黒マスのみ計算する\n",
+    "      if (i % 2 == 0 and j % 2 == 0) or (i % 2 == 1 and j % 2 == 1):\n",
+    "        plaq = pick_plaquette(spins, i, j)\n",
+    "        # print(plaq)\n",
+    "        if get_rho(plaq, rho_entries) == 0:\n",
+    "          return False\n",
+    "  return True\n",
+    "\n",
+    "# チェッカーボード上の黒マス全てのrhoの積を計算する\n",
+    "def product_of_rhos(spins, rho_entries):\n",
+    "  n, L = spins.shape\n",
+    "  product = 1\n",
+    "  for i in range(n):\n",
+    "    for j in range(L):\n",
+    "      # 黒マスのみ計算する\n",
+    "      if (i % 2 == 0 and j % 2 == 0) or (i % 2 == 1 and j % 2 == 1):\n",
+    "        plaq = pick_plaquette(spins, i, j)\n",
+    "        product *= get_rho(plaq, rho_entries)\n",
+    "  return product\n",
+    "\n",
+    "# 部分ボルツマン因子のスピン配列に対応する要素を取得する\n",
+    "def get_rho(plaquette, rho_entries):\n",
+    "  a_in_rho, b_in_rho, c_in_rho = rho_entries\n",
+    "  if np.array_equal(plaquette, np.array([[1, 1],[1, 1]])):\n",
+    "    return a_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[1, -1],[1, -1]])):\n",
+    "    return b_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[-1, 1],[-1, 1]])):\n",
+    "    return b_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[1, -1],[-1, 1]])):\n",
+    "    return c_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[-1, 1],[1, -1]])):\n",
+    "    return c_in_rho\n",
+    "  elif np.array_equal(plaquette, np.array([[-1, -1],[-1, -1]])):\n",
+    "    return a_in_rho\n",
+    "  else:\n",
+    "    return 0\n",
+    "\n",
+    "# βを受け取ってZnを計算する\n",
+    "def calc_zn(n, L, beta=1.0, J=1.0):\n",
+    "  # 部分ボルツマン因子ρの要素\n",
+    "  # rho_entries = [math.exp(beta*J/(2*n)), math.exp(-beta*J/(2*n))*math.cosh(beta*J/n), math.exp(-beta*J/(2*n))*math.sinh(beta*J/n)]\n",
+    "  # ρの成分は2nのうちのnによって決まるので、1/2している\n",
+    "  n_ = n / 2\n",
+    "  rho_entries = [math.exp(beta*J/(2*n_)), math.exp(-beta*J/(2*n_))*math.cosh(beta*J/n_), math.exp(-beta*J/(2*n_))*math.sinh(beta*J/n_)]\n",
+    "  # メインループ\n",
+    "  worlds = all_allowed_configurations(n, L, rho_entries)\n",
+    "  Zn = 0\n",
+    "  for spins in worlds:\n",
+    "    product = product_of_rhos(spins, rho_entries)\n",
+    "    if product != 0:\n",
+    "      Zn += product\n",
+    "  print(\"Zn:\", Zn)\n",
+    "  return Zn\n",
+    "\n",
+    "# 数値微分\n",
+    "def dfdx(fn, n, L, beta, h=1e-5):\n",
+    "  return (fn(n, L, beta+h) - fn(n, L, beta-h)) / (2*h)\n",
+    "\n",
+    "# lnZを求める\n",
+    "def fn(n, L, beta, h=1e-5):\n",
+    "  Zn = calc_zn(n, L, beta)\n",
+    "  return math.log(Zn)\n",
+    "\n",
+    "E = -dfdx(fn, n, L, beta)\n",
+    "print(\"E:\", E)"
    ]
   }
  ],
