足し算回路の修正

--- a/adder_circuit.ipynb
+++ b/adder_circuit.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "0bd0a8c1-344b-41f6-9ab1-f6849584da46",
    "metadata": {},
    "outputs": [
@@ -19,33 +19,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pylatexenc in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (2.10)\n",
-      "Requirement already satisfied: qiskit-aer in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (0.17.2)\n",
-      "Requirement already satisfied: qiskit>=1.1.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit-aer) (1.3.2)\n",
-      "Requirement already satisfied: numpy>=1.16.3 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit-aer) (2.3.3)\n",
-      "Requirement already satisfied: scipy>=1.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit-aer) (1.16.2)\n",
-      "Requirement already satisfied: psutil>=5 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit-aer) (7.0.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit-aer) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from python-dateutil>=2.8.0->qiskit-aer) (1.17.0)\n",
-      "Requirement already satisfied: rustworkx>=0.15.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit>=1.1.0->qiskit-aer) (0.17.1)\n",
-      "Requirement already satisfied: sympy>=1.3 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit>=1.1.0->qiskit-aer) (1.14.0)\n",
-      "Requirement already satisfied: dill>=0.3 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit>=1.1.0->qiskit-aer) (0.4.0)\n",
-      "Requirement already satisfied: stevedore>=3.0.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit>=1.1.0->qiskit-aer) (5.5.0)\n",
-      "Requirement already satisfied: typing-extensions in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit>=1.1.0->qiskit-aer) (4.15.0)\n",
-      "Requirement already satisfied: symengine<0.14,>=0.11 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit>=1.1.0->qiskit-aer) (0.13.0)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from sympy>=1.3->qiskit>=1.1.0->qiskit-aer) (1.3.0)\n",
-      "Requirement already satisfied: qiskit==1.3.2 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (1.3.2)\n",
-      "Requirement already satisfied: rustworkx>=0.15.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit==1.3.2) (0.17.1)\n",
-      "Requirement already satisfied: numpy<3,>=1.17 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit==1.3.2) (2.3.3)\n",
-      "Requirement already satisfied: scipy>=1.5 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit==1.3.2) (1.16.2)\n",
-      "Requirement already satisfied: sympy>=1.3 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit==1.3.2) (1.14.0)\n",
-      "Requirement already satisfied: dill>=0.3 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit==1.3.2) (0.4.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit==1.3.2) (2.9.0.post0)\n",
-      "Requirement already satisfied: stevedore>=3.0.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit==1.3.2) (5.5.0)\n",
-      "Requirement already satisfied: typing-extensions in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit==1.3.2) (4.15.0)\n",
-      "Requirement already satisfied: symengine<0.14,>=0.11 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit==1.3.2) (0.13.0)\n",
-      "Requirement already satisfied: six>=1.5 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from python-dateutil>=2.8.0->qiskit==1.3.2) (1.17.0)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from sympy>=1.3->qiskit==1.3.2) (1.3.0)\n",
+      "\u001b[1;33mJupyter detected\u001b[0m\u001b[1;33m...\u001b[0m\n",
+      "\u001b[1;32m2\u001b[0m\u001b[1;32m channel Terms of Service accepted\u001b[0m\n",
+      "Channels:\n",
+      " - conda-forge\n",
+      " - defaults\n",
+      "Platform: osx-arm64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "    current version: 25.9.0\n",
+      "    latest version: 25.9.1\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "\u001b[1;33mJupyter detected\u001b[0m\u001b[1;33m...\u001b[0m\n",
+      "\u001b[1;32m2\u001b[0m\u001b[1;32m channel Terms of Service accepted\u001b[0m\n",
+      "Channels:\n",
+      " - conda-forge\n",
+      " - defaults\n",
+      "Platform: osx-arm64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "    current version: 25.9.0\n",
+      "    latest version: 25.9.1\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "\u001b[1;33mJupyter detected\u001b[0m\u001b[1;33m...\u001b[0m\n",
+      "\u001b[1;32m2\u001b[0m\u001b[1;32m channel Terms of Service accepted\u001b[0m\n",
+      "Channels:\n",
+      " - conda-forge\n",
+      " - defaults\n",
+      "Platform: osx-arm64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "    current version: 25.9.0\n",
+      "    latest version: 25.9.1\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
       "Requirement already satisfied: qiskit-ibm-runtime==0.36.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (0.36.0)\n",
       "Requirement already satisfied: requests>=2.19 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit-ibm-runtime==0.36.0) (2.32.5)\n",
       "Requirement already satisfied: requests-ntlm>=1.1.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from qiskit-ibm-runtime==0.36.0) (1.3.0)\n",
@@ -75,21 +114,20 @@
       "Requirement already satisfied: pyspnego>=0.4.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from requests-ntlm>=1.1.0->qiskit-ibm-runtime==0.36.0) (0.12.0)\n",
       "Requirement already satisfied: cffi>=2.0.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from cryptography>=1.3->requests-ntlm>=1.1.0->qiskit-ibm-runtime==0.36.0) (2.0.0)\n",
       "Requirement already satisfied: pycparser in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from cffi>=2.0.0->cryptography>=1.3->requests-ntlm>=1.1.0->qiskit-ibm-runtime==0.36.0) (2.23)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from sympy>=1.3->qiskit>=1.3.2->qiskit-ibm-runtime==0.36.0) (1.3.0)\n",
-      "Requirement already satisfied: dill in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (0.4.0)\n"
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages (from sympy>=1.3->qiskit>=1.3.2->qiskit-ibm-runtime==0.36.0) (1.3.0)\n"
      ]
     }
    ],
    "source": [
-    "!conda install -c conda-forge pylatexenc\n",
-    "!conda install -c conda-forge qiskit-aer\n",
-    "!conda install -c conda-forge qiskit==1.3.2\n",
+    "!conda install -y -c conda-forge pylatexenc\n",
+    "!conda install -y -c conda-forge qiskit-aer\n",
+    "!conda install -y -c conda-forge qiskit==1.3.2\n",
     "!pip install qiskit-ibm-runtime==0.36.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "ea480260-3b8b-4564-b051-7ffcd84bec45",
    "metadata": {},
    "outputs": [
@@ -111,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5f49270c-10b7-4e45-9da7-474006de13a0",
    "metadata": {},
    "outputs": [],
@@ -552,41 +590,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "5b9d5c5c-2baa-467e-b7d4-ed9b36a30918",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "management.get:WARNING:2025-10-23 00:37:39,223: Loading default saved account\n",
-      "qiskit_runtime_service.__init__:WARNING:2025-10-23 00:37:41,353: Instance was not set at service instantiation. Free and trial plan instances will be prioritized. Based on the following filters: (tags: None, region: us-east, eu-de), and available plans: (open), the available account instances are: open-instance. If you need a specific instance set it explicitly either by using a saved account with a saved default instance or passing it in directly to QiskitRuntimeService().\n",
-      "qiskit_runtime_service.backends:WARNING:2025-10-23 00:37:41,353: Loading instance: open-instance, plan: open\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ibm_brisbane 3676\n",
-      "ibm_torino 469\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "qiskit_runtime_service.backends:WARNING:2025-10-23 00:37:43,607: Loading instance: open-instance, plan: open\n",
-      "qiskit_runtime_service.backends:WARNING:2025-10-23 00:37:44,221: Using instance: open-instance, plan: open\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "backend:  <IBMBackend('ibm_torino')>\n",
-      "QUEUED\n"
+     "ename": "ValueError",
+     "evalue": "'channel' can only be 'ibm_cloud' or 'ibm_quantum'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mqiskit_ibm_runtime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m QiskitRuntimeService, SamplerV2 \u001b[38;5;28;01mas\u001b[39;00m Sampler\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# IBM Quantumアカウントに接続（トークンが登録済みの場合）\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# 初回は次のように登録する：\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# QiskitRuntimeService.save_account(channel=\"ibm_quantum_platform\", token=\"API TOKEN\")\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m service = \u001b[43mQiskitRuntimeService\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchannel\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mibm_quantum_platform\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# 実機一覧を表示\u001b[39;00m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m backend \u001b[38;5;129;01min\u001b[39;00m service.backends():\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:125\u001b[39m, in \u001b[36mQiskitRuntimeService.__init__\u001b[39m\u001b[34m(self, channel, token, url, filename, name, instance, proxies, verify, private_endpoint, url_resolver)\u001b[39m\n\u001b[32m     78\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"QiskitRuntimeService constructor\u001b[39;00m\n\u001b[32m     79\u001b[39m \n\u001b[32m     80\u001b[39m \u001b[33;03mAn account is selected in the following order:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    121\u001b[39m \u001b[33;03m    IBMInputValueError: If an input is invalid.\u001b[39;00m\n\u001b[32m    122\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    123\u001b[39m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m()\n\u001b[32m--> \u001b[39m\u001b[32m125\u001b[39m \u001b[38;5;28mself\u001b[39m._account = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_discover_account\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    126\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtoken\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtoken\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    127\u001b[39m \u001b[43m    \u001b[49m\u001b[43murl\u001b[49m\u001b[43m=\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    128\u001b[39m \u001b[43m    \u001b[49m\u001b[43minstance\u001b[49m\u001b[43m=\u001b[49m\u001b[43minstance\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    129\u001b[39m \u001b[43m    \u001b[49m\u001b[43mchannel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mchannel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    130\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    131\u001b[39m \u001b[43m    \u001b[49m\u001b[43mname\u001b[49m\u001b[43m=\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    132\u001b[39m \u001b[43m    \u001b[49m\u001b[43mproxies\u001b[49m\u001b[43m=\u001b[49m\u001b[43mProxyConfiguration\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mproxies\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mproxies\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m    133\u001b[39m \u001b[43m    \u001b[49m\u001b[43mverify\u001b[49m\u001b[43m=\u001b[49m\u001b[43mverify\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    134\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    136\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m private_endpoint \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    137\u001b[39m     \u001b[38;5;28mself\u001b[39m._account.private_endpoint = private_endpoint\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/homebrew/Caskroom/miniconda/base/envs/SeniorThesis/lib/python3.13/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:207\u001b[39m, in \u001b[36mQiskitRuntimeService._discover_account\u001b[39m\u001b[34m(self, token, url, instance, channel, filename, name, proxies, verify)\u001b[39m\n\u001b[32m    205\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m channel:\n\u001b[32m    206\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m channel \u001b[38;5;129;01mand\u001b[39;00m channel \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m [\u001b[33m\"\u001b[39m\u001b[33mibm_cloud\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mibm_quantum\u001b[39m\u001b[33m\"\u001b[39m]:\n\u001b[32m--> \u001b[39m\u001b[32m207\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[33mchannel\u001b[39m\u001b[33m'\u001b[39m\u001b[33m can only be \u001b[39m\u001b[33m'\u001b[39m\u001b[33mibm_cloud\u001b[39m\u001b[33m'\u001b[39m\u001b[33m or \u001b[39m\u001b[33m'\u001b[39m\u001b[33mibm_quantum\u001b[39m\u001b[33m'\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    208\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m token:\n\u001b[32m    209\u001b[39m         account = Account.create_account(\n\u001b[32m    210\u001b[39m             channel=channel,\n\u001b[32m    211\u001b[39m             token=token,\n\u001b[32m   (...)\u001b[39m\u001b[32m    215\u001b[39m             verify=verify_,\n\u001b[32m    216\u001b[39m         )\n",
+      "\u001b[31mValueError\u001b[39m: 'channel' can only be 'ibm_cloud' or 'ibm_quantum'"
      ]
     }
    ],
@@ -633,6 +651,7 @@
     }
    ],
    "source": [
+    "print(job.id)\n",
     "print(job.status())"
    ]
   },
