一旦正しく動作しているぽいFCIQMCを実装完了

--- a/adder_circuit.ipynb
+++ b/adder_circuit.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "source": [
     "# 足し算回路\n",
+    "\n",
+    "## 準備\n",
+    "\n",
+    "```\n",
+    "$ conda install sympy\n",
+    "$ conda install -c conda-forge qiskit\n",
+    "$ conda install -c conda-forge qiskit-ibm-runtime\n",
+    "$ conda install -c conda-forge qiskit-aer\n",
+    "$ conda install -c conda-forge pylatexenc\n",
+    "```\n",
+    "\n",
+    "\n",
     "量子コンピュータの足し算回路を実装する"
    ]
   },
